# TaskManagerCRUD

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: __init__.py
src/api/v1/task/: dependencies.py  routers.py
src/config/: __init__.py  app.py
src/core/: database.py
src/domain/task/: exceptions.py  models.py  service.py
src/domain/task/repositories/: ABC.py  repository.py
src/infrastructure/database/: postgres.py  schema.py
